Correct button alignment

--- a/app/assets/stylesheets/projects.css.sass
+++ b/app/assets/stylesheets/projects.css.sass
@@ -130,3 +130,8 @@ blockquote
 
 
 #map_preview
+
+#submit_address
+  display: inline-block
+  text-decoration: none
+  margin-top: -9px
